--- a/.github/workflows/deploy-java-backend.yml
+++ b/.github/workflows/deploy-java-backend.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Build and Push Docker Image
       run: |
-        docker build --platform linux/amd64 -t "${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest" ./java-backend
+        docker build --platform linux/amd64 -t "${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest" ./
         docker push "${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest"
         
     - name: Deploy to Cloud Run
