--- a/.github/workflows/deploy-java-backend.yml
+++ b/.github/workflows/deploy-java-backend.yml
@@ -41,13 +41,17 @@ jobs:
       run: gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev -q
 
     - name: Build and Push Docker Image
+      id: build-push
       run: |
-        docker build --platform linux/amd64 -t "${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest" ./
-        docker push "${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest"
-        
+        IMAGE_ID="${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}"
+        docker build --platform linux/amd64 -t "$IMAGE_ID" ./
+        docker push "$IMAGE_ID"
+
+        echo "image_id=$IMAGE_ID" >> $GITHUB_OUTPUT
+
     - name: Deploy to Cloud Run
       uses: 'google-github-actions/deploy-cloudrun@v2'
       with:
         service: ${{ env.CLOUD_RUN_SERVICE }}
         region: ${{ env.GCP_REGION }}
-        image: "${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT }}/${{ env.ARTIFACT_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest"
+        image: "${{ steps.build-push.outputs.image_id }}"
